--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 			<artifactId>mockito-all</artifactId>
 			<version>1.9.5</version>
 		</dependency>
+		<dependency>
+  <groupId>mysql</groupId>
+  <artifactId>mysql-connector-java</artifactId>
+  <version>5.1.33</version>
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
