--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,63 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>${javaSource}</source>
+					<target>${javaSource}</target>
 				</configuration>
 			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>${pmd.version}</version>
+                <configuration>
+                    <aggregate>false</aggregate>
+                    <linkXref>true</linkXref>
+                    <failurePriority>1</failurePriority>
+                    <!--minimumTokens>100</minimumTokens -->
+                    <targetJdk>${javaSource}</targetJdk>
+                    <rulesets>
+                        <ruleset>${pmd.rulesetFile}</ruleset>
+                    </rulesets>
+                 <!--   <minimumPriority>${pmd.minimumPriority}</minimumPriority>-->
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>${cobertura.version}</version>
+                <configuration>
+                    <check>
+                        <branchRate>85</branchRate>
+                        <lineRate>85</lineRate>
+                        <haltOnFailure>true</haltOnFailure>
+                        <totalBranchRate>85</totalBranchRate>
+                        <totalLineRate>85</totalLineRate>
+                        <packageLineRate>85</packageLineRate>
+                        <packageBranchRate>85</packageBranchRate>
+                    </check>
+                    <formats>
+                        <format>html</format>
+                    </formats>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>clean</goal>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 	<profiles>
@@ -62,4 +113,10 @@
 			</build>
 		</profile>
 	</profiles>
+	<properties>
+		<pmd.version>3.2</pmd.version>
+		<javaSource>1.8</javaSource>
+		<cobertura.version>2.6</cobertura.version>
+		<pmd.rulesetFile>SGPlatForm_ruleset.xml</pmd.rulesetFile>
+	</properties>
 </project>
