--- a/src/test/resources/cococaca-preference.properties
+++ b/src/test/resources/cococaca-preference.properties
@@ -3,3 +3,4 @@ org.quantumlabs.cococaca.persistence.db.url = jdbc:mysql://localhost/cococaca
 org.quantumlabs.cococaca.persistence.db.username = quantumlabs
 org.quantumlabs.cococaca.persistence.db.password = root
 org.quantumlabs.cococaca.persistence.db.driver = com.mysql.jdbc.Driver
+org.quantumlabs.cococaca.persistence.db.pool.size = 1
