Fix initializing exception

--- a/src/main/resources/cococaca-preference.properties
+++ b/src/main/resources/cococaca-preference.properties
@@ -1,2 +1,8 @@
 org.quantumlabs.cococaca.persistence.type=mysql
 org.quantumlabs.cococaca.persistence.db.pool.size=20
+org.quantumlabs.cococaca.persistence.type = mysql
+org.quantumlabs.cococaca.persistence.db.url = jdbc:mysql://localhost/cococaca
+org.quantumlabs.cococaca.persistence.db.username = quantumlabs
+org.quantumlabs.cococaca.persistence.db.password = root
+org.quantumlabs.cococaca.persistence.db.driver = com.mysql.jdbc.Driver
+org.quantumlabs.cococaca.persistence.db.pool.size = 1
