--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,7 @@
 		<filter-name>StaticResourceFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<listener>
+		<listener-class>org.quantumlabs.cococaca.web.SystemInitializer</listener-class>
+	</listener>
 </web-app>
